--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
                     console.log(response);
                     // expand to body do not override body content
                     document.body.innerHTML = 'Code: ' + code + '<br>Response: ' + JSON.stringify(response);
+                    if (response.success) {
+                        // Redirect to the extension's dashboard
+                        window.location.href = 'chrome-extension://olmliaphmhdaecjdppiagmcmkodjibpo';
+                    }
                 });
             }
         });
