--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>OAuth Redirect</title>
     <script>
@@ -10,16 +10,6 @@
             if (code) {
                 // Send the authorization code to the Chrome extension
                 window.location.href = 'chrome-extension://olmliaphmhdaecjdppiagmcmkodjibpo' + '?authorizationCode=' + code;
-                // chrome.runtime.sendMessage('olmliaphmhdaecjdppiagmcmkodjibpo', {authorizationCode: code}, function (response) {
-                //     console.log(response);
-                //     // expand to body do not override body content
-                //     document.body.innerHTML = 'Code: ' + code + '<br>Response: ' + JSON.stringify(response);
-                //     if (response.result === 'success') {
-                //         // Redirect to the extension's dashboard
-                //         console.log("redirecting")
-                //         window.location.href = 'chrome-extension://olmliaphmhdaecjdppiagmcmkodjibpo';
-                //     }
-                // });
             }
         });
     </script>
