--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             const code = urlParams.get('code');
             if (code) {
                 // Send the authorization code to the Chrome extension
-                document.body.innerHTML = 'Code: ' + code + '<br>Response: ' + JSON.stringify(response);
-                // count down 5 seconds to redirect to extension, show the count down number on the page
+                document.body.innerHTML = 'Code: ' + code;
+                // count down 5 seconds to redirect to extension, show the count-down number on the page
                 let count = 5;
                 const interval = setInterval(() => {
                     count--;
-                    document.body.innerHTML = 'Code: ' + code + '<br>Response: ' + JSON.stringify(response) + '<br>Redirecting to extension in ' + count + ' seconds';
+                    document.body.innerHTML = 'Code: ' + code + '<br>Redirecting to extension in ' + count + ' seconds';
                     if (count === 0) {
                         clearInterval(interval);
                         window.location.href = 'chrome-extension://olmliaphmhdaecjdppiagmcmkodjibpo' + '?authorizationCode=' + code;
